<resources>
    <string name="app_name">UniScan</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="create_event">Create Event</string>
    <string name="read_qr_code">Read QR Code</string>
    <string name="event_list">Event List</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="nameuser">Giovanni Filiberto</string>
    <string name="usernameUser">AB123CD</string>
    <string name="badge">Badge</string>
    <string name="badgenumber">123456</string>
    <string name="update_event">Update Event</string>
    <string name="download_event">Download Events History</string>
    <string name="event">Event</string>
    <string name="name_event">Name Event</string>
    <string name="user">User</string>
    <string name="create_user">Create User</string>
    <string name="update_user">Update User</string>
    <string name="logout">Logout</string>
    <string name="add_event_button_desc">add_event_button_desc</string>
    <string name="delete_event">Delete event</string>
    <string name="ok">OK</string>
    <string name="readqrcodepage">ReadQRCodePage</string>
    <string name="unable_to_insert_presence_already_registered">Unable to insert presence, already registered</string>
    <string-array name="event_categories">
        <item>Lesson</item>
        <item>Conferance</item>
        <item>Lab</item>
    </string-array>
    <string-array name="user_types">
        <item>Admin</item>
        <item>Professor</item>
        <item>Student</item>
    </string-array>
</resources>