<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ProfileProfActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="?attr/actionBarTheme">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/backicon"
            android:contentDescription="@string/back"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/profile_details_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:clipToOutline="true"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/purple_main"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/purple_main"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/badge"
            android:textColor="@color/purple_main"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/badgeField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password_button"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_details_box"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_white"
        android:backgroundTint="@color/white"
        android:text="@string/change_password"
        android:textColor="@color/purple_main"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/rounded_button"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/bottom_image"
        android:layout_width="312dp"
        android:layout_height="265dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="0dp"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/banners_liquid_shapes_modern_graphic_elements_png" />
</RelativeLayout>
