<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".EventList">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="?attr/actionBarTheme">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/backicon"
            android:contentDescription="@string/back"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event_list"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/eventlist"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="436dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_event"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="370dp"
        android:background="@drawable/rounded_button_white"
        android:backgroundTint="@color/white"
        android:text="@string/update_event"
        android:textColor="@color/purple_main"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/download_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/rounded_button_white"
        android:backgroundTint="@color/white"
        android:text="@string/download_event"
        android:textColor="@color/purple_main"
        android:textSize="18sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="366dp"
        android:contentDescription="@string/add_event_button_desc"
        android:src="@drawable/addimage"
        app:backgroundTint="@color/purple_main"
        app:tint="@color/background_color"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/bottom_image"
        android:layout_width="312dp"
        android:layout_height="265dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="0dp"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/banners_liquid_shapes_modern_graphic_elements_png" />
</RelativeLayout>
