<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <!-- Image above the login field -->

    <!-- Login Form Container -->

    <ImageView
        android:id="@+id/imageAboveLogin"
        android:layout_width="wrap_content"
        android:layout_height="206dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="104dp"
        android:src="@drawable/unicorno_prova_prof" />

    <!-- Image below the password field -->

    <LinearLayout
        android:id="@+id/loginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageAboveLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/unicorn_box_background"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Login Title -->
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/unicorn_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/unicorn_edit_text_background"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:padding="12dp"
            android:textColor="@color/unicorn_text"
            android:textColorHint="@color/unicorn_hint" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/unicorn_edit_text_background"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/unicorn_text"
            android:textColorHint="@color/unicorn_hint" />

        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/purple_main"
            android:text="@string/authenticate"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageBelowPassword"
        android:layout_width="wrap_content"
        android:layout_height="295dp"
        android:layout_below="@id/loginFormContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/unicorno_prova_stud" />

</RelativeLayout>