<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E6E7"
    tools:context=".AdminHomeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/home"
            android:textColor="#4A4A4A"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/profile_icon" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_user"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="83dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_user"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_user"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_below="@id/create_user"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/rounded_button"
        android:text="@string/update_user"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/background_bottom"
        android:layout_width="312dp"
        android:layout_height="265dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-3dp"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/banners_liquid_shapes_modern_graphic_elements_png" />

</RelativeLayout>