<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E6E7"
    tools:context=".Event">

    <!-- AppBar with Toolbar -->

    <!-- Unicorn image -->

    <!-- Read QR Code Button -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="?attr/actionBarTheme">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/backicon"
            android:contentDescription="@string/back"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/eventField"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/rounded_button_white"
        android:drawablePadding="10dp"
        android:hint="@string/name_event"
        android:padding="12dp"
        android:textColor="@color/unicorn_text"
        android:textColorHint="@color/unicorn_hint" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:layout_above="@+id/confirmEvent"
        android:layout_below="@+id/eventField"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="54dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/custon_spinner"
        android:entries="@array/event_categories"
        android:spinnerMode="dropdown" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="377dp"
        android:background="@drawable/rounded_button"
        android:text="OK"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/background_bottom"
        android:layout_width="312dp"
        android:layout_height="265dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-3dp"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/banners_liquid_shapes_modern_graphic_elements_png" />

</RelativeLayout>